--- a/j_6_datastructure.ipynb
+++ b/j_6_datastructure.ipynb
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1062,10 +1062,10 @@
      "text": [
       " String[] names={\"동경국제공항\", \"베이징국제공항\",\"런던히드로공항\",\"시드니공항\",\"존.F.케네디\", \"조모케냐타국제공항\"} \r",
       ";\r\n",
-      "|  Added variable names of type String[] with initial value [Ljava.lang.String;@1e397ed7\r\n",
+      "|  Added variable names of type String[] with initial value [Ljava.lang.String;@f6c48ac\r\n",
       "\r\n",
       " int[] temp={13,6,5,18,17,17};\r\n",
-      "|  Added variable temp of type int[] with initial value [I@56ac3a89\r\n",
+      "|  Added variable temp of type int[] with initial value [I@598067a5\r\n",
       "\r\n"
      ]
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1088,20 +1088,20 @@
      "output_type": "stream",
      "text": [
       " for(int i=0;i<names.length;i++)\r\n",
-      "     System.out.printf(\"공항:%s\\t온도:%d\\n\",names[i],temp[i])\r\n",
-      "공항:동경국제공항\t온도:13\r\n",
-      "공항:베이징국제공항\t온도:6\r\n",
-      "공항:런던히드로공항\t온도:5\r\n",
-      "공항:시드니공항\t온도:18\r\n",
-      "공항:존.F.케네디\t온도:17\r\n",
-      "공항:조모케냐타국제공항\t온도:17\r\n",
+      "     System.out.printf(\"공항:%-25s\\t온도:%3d\\n\",names[i],temp[i])\r\n",
+      "공항:동경국제공항                   \t온도: 13\r\n",
+      "공항:베이징국제공항                  \t온도:  6\r\n",
+      "공항:런던히드로공항                  \t온도:  5\r\n",
+      "공항:시드니공항                    \t온도: 18\r\n",
+      "공항:존.F.케네디                  \t온도: 17\r\n",
+      "공항:조모케냐타국제공항                \t온도: 17\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
     "for(int i=0;i<names.length;i++)\n",
-    "    System.out.printf(\"공항:%s\\t온도:%d\\n\",names[i],temp[i])"
+    "    System.out.printf(\"공항:%-25s\\t온도:%3d\\n\",names[i],temp[i])"
    ]
   },
   {
@@ -4774,7 +4774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -4794,8 +4794,7 @@
       "     {\"English\", 82.3},\r\n",
       "     {\"Math\", 98.5}\r\n",
       " }\r\n",
-      "|  Modified variable marks of type Object[][] with initial value [[Ljava.lang.Object;@5ec0a365\r\n",
-      "|    Update overwrote variable marks\r\n",
+      "|  Added variable marks of type Object[][] with initial value [[Ljava.lang.Object;@6e1567f1\r\n",
       "\r\n"
      ]
     }
@@ -4905,11 +4904,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " double englishSum=0\r\n",
+      "|  Modified variable englishSum of type double with initial value 0.0\r\n",
+      "|    Update overwrote variable englishSum\r\n",
+      "\r\n",
+      " double mathSum=0\r\n",
+      "|  Modified variable mathSum of type double with initial value 0.0\r\n",
+      "|    Update overwrote variable mathSum\r\n",
+      "\r\n",
+      " int englishCount=0\r\n",
+      "|  Modified variable englishCount of type int with initial value 0\r\n",
+      "|    Update overwrote variable englishCount\r\n",
+      "\r\n",
+      " int mathCount=0\r\n",
+      "|  Modified variable mathCount of type int with initial value 0\r\n",
+      "|    Update overwrote variable mathCount\r\n",
+      "\r\n",
+      " for(Object[] obj:marks) {\r\n",
+      "     String subj = (String) obj[0];       //문자열로 형변환\r\n",
+      "     double mark = (double)obj[1];        //소수로 형변환\r\n",
+      "     if(subj.equals(\"English\")) {\r\n",
+      "         englishSum+=mark;\r\n",
+      "         englishCount+=1;\r\n",
+      "     } else if(subj.equals(\"Math\")) {\r\n",
+      "         mathSum+=mark;\r\n",
+      "         mathCount+=1;\r\n",
+      "     }\r\n",
+      " }\r\n",
+      "\r\n"
+     ]
+    }
+   ],
    "source": [
     "double englishSum=0\n",
     "double mathSum=0\n",
@@ -4930,7 +4964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -4945,12 +4979,12 @@
      "text": [
       " System.out.printf(\"English: %.1f %.1f %d\",englishSum/englishCount,englishSum, \r",
       "englishCount);\r\n",
-      "English: 84.1 252.3 3|  Expression value is: java.io.PrintStream@73ad2d6\r\n",
-      "|    assigned to temporary variable $75 of type PrintStream\r\n",
+      "English: 84.1 252.3 3|  Expression value is: java.io.PrintStream@5649fd9b\r\n",
+      "|    assigned to temporary variable $13 of type PrintStream\r\n",
       "\r\n",
       " System.out.printf(\"Math: %.1f %.1f %d\",mathSum/mathCount,mathSum,mathCount);\r\n",
-      "Math: 92.8 278.5 3|  Expression value is: java.io.PrintStream@73ad2d6\r\n",
-      "|    assigned to temporary variable $76 of type PrintStream\r\n",
+      "Math: 92.8 278.5 3|  Expression value is: java.io.PrintStream@5649fd9b\r\n",
+      "|    assigned to temporary variable $14 of type PrintStream\r\n",
       "\r\n"
      ]
     }
@@ -4958,6 +4992,161 @@
    "source": [
     "System.out.printf(\"English: %.1f %.1f %d\",englishSum/englishCount,englishSum,englishCount);\n",
     "System.out.printf(\"Math: %.1f %.1f %d\",mathSum/mathCount,mathSum,mathCount);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "* 클래스로 만들어 보자."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " class Grade {\r\n",
+      "     Object[][] marks = {\r\n",
+      "         {\"English\", 100.0},\r\n",
+      "         {\"Math\", 80.0},\r\n",
+      "         {\"English\", 70.0},\r\n",
+      "         {\"Math\", 100.0},\r\n",
+      "         {\"English\", 82.3},\r\n",
+      "         {\"Math\", 98.5}\r\n",
+      "     };\r\n",
+      "     public double[] getAvg() {\r\n",
+      "         double[] avg={0.0,0.0};\r\n",
+      "         int englishCount=0;\r\n",
+      "         int mathCount=0;\r\n",
+      "         for(Object[] obj:marks) {\r\n",
+      "             String subj = (String)obj[0];\r\n",
+      "             double mark = (double)obj[1];\r\n",
+      "             if(subj.equals(\"English\")) {\r\n",
+      "                 avg[0]+=mark;\r\n",
+      "                 englishCount+=1;\r\n",
+      "             }\r\n",
+      "             else if(subj.equals(\"Math\")) {\r\n",
+      "                 avg[1]+=mark;\r\n",
+      "                 mathCount+=1;\r\n",
+      "             }\r\n",
+      "         }\r\n",
+      "         avg[0]/=englishCount;\r\n",
+      "         avg[1]/=mathCount;\r\n",
+      "         //System.out.printf(\"English avg: %.1f Math avg: %.1f\",avg[0], avg[1] \r",
+      ");\r\n",
+      "         return avg;\r\n",
+      "     }\r\n",
+      " }\r\n",
+      "|  Modified class Grade\r\n",
+      "|    Update overwrote class Grade\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Grade {\n",
+    "    Object[][] marks = {\n",
+    "        {\"English\", 100.0},\n",
+    "        {\"Math\", 80.0},\n",
+    "        {\"English\", 70.0},\n",
+    "        {\"Math\", 100.0},\n",
+    "        {\"English\", 82.3},\n",
+    "        {\"Math\", 98.5}\n",
+    "    };\n",
+    "    public double[] getAvg() {\n",
+    "        double[] avg={0.0,0.0};\n",
+    "        int englishCount=0;\n",
+    "        int mathCount=0;\n",
+    "        for(Object[] obj:marks) {\n",
+    "            String subj = (String)obj[0];\n",
+    "            double mark = (double)obj[1];\n",
+    "            if(subj.equals(\"English\")) {\n",
+    "                avg[0]+=mark;\n",
+    "                englishCount+=1;\n",
+    "            }\n",
+    "            else if(subj.equals(\"Math\")) {\n",
+    "                avg[1]+=mark;\n",
+    "                mathCount+=1;\n",
+    "            }\n",
+    "        }\n",
+    "        avg[0]/=englishCount;\n",
+    "        avg[1]/=mathCount;\n",
+    "        //System.out.printf(\"English avg: %.1f Math avg: %.1f\",avg[0], avg[1]);\n",
+    "        return avg;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Grade g=new Grade();\r\n",
+      "|  Modified variable g of type Grade with initial value Grade@72d818d1\r\n",
+      "|    Update overwrote variable g\r\n",
+      "\r\n",
+      " double[] avg=g.getAvg();\r\n",
+      "|  Modified variable avg of type double[] with initial value [D@6e06451e\r\n",
+      "|    Update overwrote variable avg\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Grade g=new Grade();\n",
+    "double[] avg=g.getAvg();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " System.out.printf(\"English avg: %.1f Math avg: %.1f\",avg[0], avg[1]);\r\n",
+      "English avg: 84.1 Math avg: 92.8|  Expression value is: java.io.PrintStream@27c20538\r\n",
+      "|    assigned to temporary variable $11 of type PrintStream\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "System.out.printf(\"English avg: %.1f Math avg: %.1f\",avg[0], avg[1]);"
    ]
   },
   {
@@ -5333,7 +5522,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "\n",
     "함수로 만들어 보자.\n",
@@ -5512,7 +5705,7 @@
       " String[] words = \"He and his brother playing football.\".split(\"\\\\s+\");\r\n",
       "|  Added variable words of type String[] with initial value [Ljava.lang.String;@57fffcd7\r\n",
       "\r\n",
-      " for (int i = 0, l = words.length; i + 1 < l; i++)\r\n",
+      " for (int i = 0; i < words.length-1; i++)\r\n",
       "         System.out.println(words[i] + \" \" + words[i + 1]);\r\n",
       "He and\r\n",
       "and his\r\n",
@@ -5525,7 +5718,7 @@
    ],
    "source": [
     "String[] words = \"He and his brother playing football.\".split(\"\\\\s+\");\n",
-    "for (int i = 0, l = words.length; i + 1 < l; i++)\n",
+    "for (int i = 0; i < words.length-1; i++)\n",
     "        System.out.println(words[i] + \" \" + words[i + 1]);"
    ]
   },
