--- a/j_8_inheritancepolymorphism.ipynb
+++ b/j_8_inheritancepolymorphism.ipynb
@@ -559,7 +559,7 @@
     "    }\n",
     "    @Override\n",
     "    void print() {\n",
-    "        System.out.println(\"Arabia coffee..\");\n",
+    "        System.out.println(\"Arabica coffee..\");\n",
     "    }\n",
     "}"
    ]
