--- a/j_6_datastructure.ipynb
+++ b/j_6_datastructure.ipynb
@@ -6708,7 +6708,7 @@
     "    //print c,asciicode\n",
     "    if (ascii>=48 && ascii<=57) {\n",
     "        keyName=\"DIGITS\";\n",
-    "        numList.add(Character.getNumericValue(c));\n",
+    "        numList.add(Character.getaNumericValue(c));\n",
     "    } else if (ascii>=65 && ascii<=90 || ascii>=97 && ascii<=122) {\n",
     "        keyName=\"LETTERS\";\n",
     "        charList.add(Character.toString(c)); \n",
