--- a/j_8_inheritancepolymorphism.ipynb
+++ b/j_8_inheritancepolymorphism.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 7. inheritance\n",
     "\n",
-    "Last updated 20180602SAT1630 20180520SUN2230\n",
+    "Last updated 20190530THR1300 20180602SAT1630 20180520SUN2230\n",
     "\n",
     "## 7.1 학습내용\n",
     "\n",
@@ -1477,32 +1477,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " class Cube extends Rectangle {\r\n",
-      "     double height;\r\n",
-      "     public Cube(double l, double w, double h) {\r\n",
-      "         super(l,w);\r\n",
-      "         this.height=h;\r\n",
-      "     }\r\n",
-      "     public double getHeight() {\r\n",
-      "         return height;\r\n",
-      "     }\r\n",
-      " }\r\n",
-      "|  Added class Cube\r\n",
-      "\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Cube extends Rectangle {\n",
+    "# %load src/com/sd/select/Cube.java\n",
+    "package com.sd.select;\n",
+    "public class Cube extends Rectangle {\n",
     "    double height;\n",
     "    public Cube(double l, double w, double h) {\n",
     "        super(l,w);\n",
@@ -1511,7 +1494,7 @@
     "    public double getHeight() {\n",
     "        return height;\n",
     "    }\n",
-    "}"
+    "}\n"
    ]
   },
   {
@@ -1713,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -1721,39 +1704,11 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " class Rectangle {\r\n",
-      "     protected double length;\r\n",
-      "     protected double width;\r\n",
-      "     protected boolean isSelected;\r\n",
-      "     public Rectangle(double l, double w) {\r\n",
-      "         this.length=l;\r\n",
-      "         this.width=w;\r\n",
-      "     }\r\n",
-      "     public double getLength() {\r\n",
-      "         return length;\r\n",
-      "     }\r\n",
-      "     public double getWidth() {\r\n",
-      "         return width;\r\n",
-      "     }\r\n",
-      "     public void setSelected(boolean b) {\r\n",
-      "         isSelected=b;\r\n",
-      "     }\r\n",
-      "     public boolean getSelected() {\r\n",
-      "         return isSelected;\r\n",
-      "     }\r\n",
-      " }\r\n",
-      "|  Added class Rectangle\r\n",
-      "\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Rectangle {\n",
+    "# %load src/com/sd/select/Rectangle.java\n",
+    "package com.sd.select;\n",
+    "public class Rectangle {\n",
     "    protected double length;\n",
     "    protected double width;\n",
     "    protected boolean isSelected;\n",
@@ -1773,7 +1728,7 @@
     "    public boolean getSelected() {\n",
     "        return isSelected;\n",
     "    }\n",
-    "}"
+    "}\n"
    ]
   },
   {
@@ -2183,39 +2138,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " class Selection {\r\n",
-      "     ArrayList<Rectangle> sArr=new ArrayList<Rectangle>();\r\n",
-      "     Selection(){}\r\n",
-      "     public void select(Rectangle r) {\r\n",
-      "         r.setSelected(true);\r\n",
-      "         sArr.add(r);\r\n",
-      "         System.out.println(\"selected: \"+r.isSelected);\r\n",
-      "     }\r\n",
-      "     public void print() {\r\n",
-      "         for(Rectangle r:sArr)\r\n",
-      "             System.out.println(r.toString());\r\n",
-      "     }\r\n",
-      " }\r\n",
-      "|  Modified class Selection\r\n",
-      "|    Update overwrote class Selection\r\n",
-      "\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Selection {\n",
+    "# %load src/com/sd/select/Selection.java\n",
+    "package com.sd.select;\n",
+    "import java.util.ArrayList;\n",
+    "public class Selection {\n",
     "    ArrayList<Rectangle> sArr=new ArrayList<Rectangle>();\n",
     "    Selection(){}\n",
     "    public void select(Rectangle r) {\n",
@@ -2227,7 +2162,7 @@
     "        for(Rectangle r:sArr)\n",
     "            System.out.println(r.toString());\n",
     "    }\n",
-    "}"
+    "}\n"
    ]
   },
   {
@@ -2266,6 +2201,17 @@
     "Selection s=new Selection();\n",
     "s.select(r);\n",
     "s.print();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "추가: 선택된 도형의 길이 합계를 구해보자. 반복문을 사용해서 해보자."
    ]
   },
   {
